# rclone-ui

./: .gitignore  README.md  index.html  main.ts  package-lock.json  package.json  snapcraft.yaml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: release-linux-arm.yml  release-linux.yml  release-macos.yml  release-personal.yml  release-windows.yml  release-winget.yml  release.yml  sync-fork-from-upstream.yml  sync-upstream.yml
lib/: flags.ts  format.ts  fs.ts  hooks.ts  tray.ts  window.ts
lib/rclone/: api.ts  client.ts  common.ts  constants.ts  init.ts
src/: main.tsx
src-tauri/: Cargo.toml  flatpak.metainfo.xml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/common/: shortcut.rs  window.rs
src-tauri/src/: lib.rs
src/components/: CronEditor.tsx  PathFinder.tsx  PathSelector.tsx  RemoteAutoMountDrawer.tsx  RemoteCreateDrawer.tsx  RemoteOptionsSection.tsx  TemplateAddDrawer.tsx
src/components/navigator/: FileList.tsx  FilePanel.tsx  PanelToolbar.tsx  PreviewDrawer.tsx  RemoteSidebar.tsx  index.ts  useCreateFolder.ts  useFileNavigation.ts  utils.ts
src/pages/: Bisync.tsx  Commander.tsx  Copy.tsx  Delete.tsx  Download.tsx  Mount.tsx  Move.tsx  Purge.tsx  Schedules.tsx  Serve.tsx  Startup.tsx  Sync.tsx  Toolbar.tsx  Transfers.tsx
src/pages/Settings/: ConfigSection.tsx  GeneralSection.tsx  LicenseSection.tsx  RemotesSection.tsx  index.tsx
store/: host.ts  memory.ts  persisted.ts
toolbar/: actions.ts
